--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   },
   "dependencies": {
     "gatsby": "^2.26.1",
+    "gatsby-plugin-sass": "^2.8.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-icons": "^4.1.0",
+    "sass": "^1.30.0"
   },
   "devDependencies": {
     "prettier": "2.1.2"
