--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "gatsby": "^2.26.1",
     "gatsby-plugin-sass": "^2.8.0",
+    "node-sass": "^4.12.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^4.1.0",
     "sass": "^1.30.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.2",
     "prettier": "2.1.2"
   },
   "repository": {
