--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
     "babel-plugin-styled-components": "^1.12.0",
     "bootstrap": "^4.3.1",
     "gatsby": "^2.26.1",
+    "gatsby-background-image": "^1.3.1",
+    "gatsby-image": "^2.8.0",
     "gatsby-plugin-sass": "^2.8.0",
+    "gatsby-plugin-sharp": "^2.11.1",
     "gatsby-plugin-styled-components": "^3.7.0",
+    "gatsby-source-filesystem": "^2.8.0",
+    "gatsby-transformer-sharp": "^2.9.0",
     "node-sass": "^4.12.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
