--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
     "bootstrap": "^4.3.1",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.26.1",
     "gatsby-background-image": "^1.3.1",
     "gatsby-image": "^2.8.0",
+    "gatsby-plugin-playground": "^1.0.6",
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-sharp": "^2.11.1",
     "gatsby-plugin-styled-components": "^3.7.0",
     "gatsby-plugin-transition-link": "^1.20.5",
+    "gatsby-source-contentful": "^4.3.0",
     "gatsby-source-filesystem": "^2.8.0",
     "gatsby-transformer-sharp": "^2.9.0",
     "gsap": "^3.5.1",
