--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open",
+    "test:e2e:ci": "start-server-and-test develop http://localhost:8000 cy:run"
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^14.1.2",
@@ -39,7 +43,9 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
-    "prettier": "2.1.2"
+    "cypress": "^6.2.1",
+    "prettier": "2.1.2",
+    "start-server-and-test": "^1.11.7"
   },
   "repository": {
     "type": "git",
